<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.ibm</groupId>
    <artifactId>gpu-enabler-parent</artifactId>
    <version>2.0.0</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <groupId>com.ibm</groupId>
  <artifactId>gpu-enabler-examples_${scala.binary.version}</artifactId>
  <version>2.0.0</version>
  <inceptionYear>2016</inceptionYear>
  <packaging>jar</packaging>
  <properties>
      <sbt.project.name>examples</sbt.project.name>
      <libJ.version>linux-ppc_64</libJ.version>
  </properties>
  <name>GPU Enabler Examples</name>

  <repositories>
    <repository>
      <id>scala-tools.org</id>
      <name>Scala-Tools Maven2 Repository</name>
      <url>http://scala-tools.org/repo-releases</url>
    </repository>
    <repository>
        <id>jcuda.local</id>
        <name>JCuda</name>
        <url>file:${project.basedir}/../${mavenized.jcuda}/repo</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>scala-tools.org</id>
      <name>Scala-Tools Maven2 Repository</name>
      <url>http://scala-tools.org/repo-releases</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>com.ibm</groupId>
      <artifactId>gpu-enabler_${scala.binary.version}</artifactId>
      <version>2.0.0</version>
    </dependency>
      <dependency>
          <groupId>org.apache.spark</groupId>
          <artifactId>spark-mllib_2.11</artifactId>
          <version>2.1.0</version>
      </dependency>
    <!--dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-xml</artifactId>
      <version>2.11.0-M4</version>
    </dependency-->
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>
    <dependency>
      <groupId>org.specs</groupId>
      <artifactId>specs</artifactId>
      <version>1.2.5</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src/main/</sourceDirectory>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>net.alchim31.maven</groupId>
          <artifactId>scala-maven-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.0.2</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>1.7</source>
                <target>1.7</target>
            </configuration>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <executions>
              <execution>
                  <id>unpack-jcublas-natives</id>
                  <phase>package</phase>
                  <goals>
                      <goal>unpack</goal>
                  </goals>
                  <configuration>
                      <skip>${skip.jcuda.natives}</skip>
                      <artifactItems>
                          <artifactItem>
                              <groupId>jcuda</groupId>
                              <artifactId>jcublas-natives</artifactId>
                              <version>${jcuda.version}</version>
                              <classifier>${libJ.version}</classifier>
                              <type>jar</type>
                              <overWrite>true</overWrite>
                              <includes>**/*.so</includes>
                              <outputDirectory>${project.build.directory}</outputDirectory>
                          </artifactItem>
                      </artifactItems>
                  </configuration>
              </execution>

              <execution>
                  <id>unpack-jcuda-natives</id>
                  <phase>package</phase>
                  <goals>
                      <goal>unpack</goal>
                  </goals>
                  <configuration>
                      <skip>${skip.jcuda.natives}</skip>
                      <artifactItems>
                          <artifactItem>
                              <groupId>jcuda</groupId>
                              <artifactId>jcuda-natives</artifactId>
                              <version>${jcuda.version}</version>
                              <classifier>${libJ.version}</classifier>
                              <type>jar</type>
                              <overWrite>true</overWrite>
                              <includes>**/*.so</includes>
                              <outputDirectory>${project.build.directory}</outputDirectory>
                          </artifactItem>
                      </artifactItems>
                  </configuration>
              </execution>

              <execution>
                  <id>unpack-jcudnn-natives</id>
                  <phase>package</phase>
                  <goals>
                      <goal>unpack</goal>
                  </goals>
                  <configuration>
                      <skip>${skip.jcuda.natives}</skip>
                      <artifactItems>
                          <artifactItem>
                              <groupId>jcuda</groupId>
                              <artifactId>jcudnn-natives</artifactId>
                              <version>${jcuda.version}</version>
                              <classifier>${libJ.version}</classifier>
                              <type>jar</type>
                              <overWrite>true</overWrite>
                              <includes>**/*.so</includes>
                              <outputDirectory>${project.build.directory}</outputDirectory>
                          </artifactItem>
                      </artifactItems>
                  </configuration>
              </execution>

              <execution>
                  <id>unpack-jcufft-natives</id>
                  <phase>package</phase>
                  <goals>
                      <goal>unpack</goal>
                  </goals>
                  <configuration>
                      <skip>${skip.jcuda.natives}</skip>
                      <artifactItems>
                          <artifactItem>
                              <groupId>jcuda</groupId>
                              <artifactId>jcufft-natives</artifactId>
                              <version>${jcuda.version}</version>
                              <classifier>${libJ.version}</classifier>
                              <type>jar</type>
                              <overWrite>true</overWrite>
                              <includes>**/*.so</includes>
                              <outputDirectory>${project.build.directory}</outputDirectory>
                          </artifactItem>
                      </artifactItems>
                  </configuration>
              </execution>

              <execution>
                  <id>unpack-jcurand-natives</id>
                  <phase>package</phase>
                  <goals>
                      <goal>unpack</goal>
                  </goals>
                  <configuration>
                      <skip>${skip.jcuda.natives}</skip>
                      <artifactItems>
                          <artifactItem>
                              <groupId>jcuda</groupId>
                              <artifactId>jcurand-natives</artifactId>
                              <version>${jcuda.version}</version>
                              <classifier>${libJ.version}</classifier>
                              <type>jar</type>
                              <overWrite>true</overWrite>
                              <includes>**/*.so</includes>
                              <outputDirectory>${project.build.directory}</outputDirectory>
                          </artifactItem>
                      </artifactItems>
                  </configuration>
              </execution>

              <execution>
                  <id>unpack-jcusolver-natives</id>
                  <phase>package</phase>
                  <goals>
                      <goal>unpack</goal>
                  </goals>
                  <configuration>
                      <skip>${skip.jcuda.natives}</skip>
                      <artifactItems>
                          <artifactItem>
                              <groupId>jcuda</groupId>
                              <artifactId>jcusolver-natives</artifactId>
                              <version>${jcuda.version}</version>
                              <classifier>${libJ.version}</classifier>
                              <type>jar</type>
                              <overWrite>true</overWrite>
                              <includes>**/*.so</includes>
                              <outputDirectory>${project.build.directory}</outputDirectory>
                          </artifactItem>
                      </artifactItems>
                  </configuration>
              </execution>

              <execution>
                  <id>unpack-jcusparse-natives</id>
                  <phase>package</phase>
                  <goals>
                      <goal>unpack</goal>
                  </goals>
                  <configuration>
                      <skip>${skip.jcuda.natives}</skip>
                      <artifactItems>
                          <artifactItem>
                              <groupId>jcuda</groupId>
                              <artifactId>jcusparse-natives</artifactId>
                              <version>${jcuda.version}</version>
                              <classifier>${libJ.version}</classifier>
                              <type>jar</type>
                              <overWrite>true</overWrite>
                              <includes>**/*.so</includes>
                              <outputDirectory>${project.build.directory}</outputDirectory>
                          </artifactItem>
                      </artifactItems>
                  </configuration>
              </execution>

              <execution>
                  <id>unpack-jnvgraph-natives</id>
                  <phase>package</phase>
                  <goals>
                      <goal>unpack</goal>
                  </goals>
                  <configuration>
                      <skip>${skip.jcuda.natives}</skip>
                      <artifactItems>
                          <artifactItem>
                              <groupId>jcuda</groupId>
                              <artifactId>jnvgraph-natives</artifactId>
                              <version>${jcuda.version}</version>
                              <classifier>${libJ.version}</classifier>
                              <type>jar</type>
                              <overWrite>true</overWrite>
                              <includes>**/*.so</includes>
                              <outputDirectory>${project.build.directory}</outputDirectory>
                          </artifactItem>
                      </artifactItems>
                  </configuration>
              </execution>    
          </executions>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.0.0</version>
          <configuration>
              <shadedArtifactAttached>false</shadedArtifactAttached>
              <artifactSet>
                  <includes>
                      <include>com.ibm:gpu-enabler_2.11</include>
                  </includes>
              </artifactSet>
          </configuration>
          <executions>
              <execution>
                  <phase>package</phase>
                  <goals>
                      <goal>shade</goal>
                  </goals>
              </execution>
          </executions>
      </plugin>
      <plugin>
        <groupId>org.scala-tools</groupId>
        <artifactId>maven-scala-plugin</artifactId>
        <version>2.15.2</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
            </goals>
              <configuration>
                <excludes>
                    <exclude>${exclude.files}</exclude>
                </excludes>
              </configuration>
          </execution>
        </executions>
        <configuration>
          <scalaVersion>${scala.version}</scalaVersion>
          <!--args>
            <arg>-target:jvm-1.5</arg>
          </args -->
        </configuration>
      </plugin>
        <plugin>
          <groupId>net.alchim31.maven</groupId>
          <artifactId>scala-maven-plugin</artifactId>
          <version>3.2.2</version>
          <executions>
            <execution>
              <id>eclipse-add-source</id>
              <goals>
                <goal>add-source</goal>
              </goals>
            </execution>
            <execution>
              <id>scala-compile-first</id>
              <phase>process-resources</phase>
              <goals>
                <goal>compile</goal>
              </goals>
              <configuration>
                <skip>${skip.jcuda.natives}</skip>
                <excludes>
                    <exclude>${exclude.files}</exclude>
                </excludes>
              </configuration>
            </execution>
            <execution>
              <id>scala-test-compile-first</id>
              <phase>process-test-resources</phase>
              <goals>
                <goal>testCompile</goal>
              </goals>
            </execution>
            <execution>
              <id>attach-scaladocs</id>
              <phase>verify</phase>
              <goals>
                <goal>doc-jar</goal>
              </goals>
              <configuration>
                <skip>${skip.jcuda.natives}</skip>
                <excludes>
                    <exclude>${exclude.files}</exclude>
                </excludes>
              </configuration>
            </execution>
          </executions>
          <configuration>
            <scalaVersion>${scala.version}</scalaVersion>
            <recompileMode>incremental</recompileMode>
            <useZincServer>true</useZincServer>
            <args>
              <arg>-unchecked</arg>
              <arg>-deprecation</arg>
              <arg>-feature</arg>
            </args>
            <jvmArgs>
              <jvmArg>-Xms${HeapSize}</jvmArg>
              <jvmArg>-Xmx${MaxHeapSize}</jvmArg>
              <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
              <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
              <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
            </jvmArgs>
            <!--javacArgs>
              <javacArg>-source</javacArg>
              <javacArg>${java.version}</javacArg>
              <javacArg>-target</javacArg>
              <javacArg>${java.version}</javacArg>
              <javacArg>-Xlint:all,-serial,-path</javacArg>
            </javacArgs -->
          </configuration>
        </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.10</version>
        <configuration>
          <downloadSources>true</downloadSources>
          <buildcommands>
            <buildcommand>ch.epfl.lamp.sdt.core.scalabuilder</buildcommand>
          </buildcommands>
          <additionalProjectnatures>
            <projectnature>ch.epfl.lamp.sdt.core.scalanature</projectnature>
          </additionalProjectnatures>
          <classpathContainers>
            <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
            <classpathContainer>ch.epfl.lamp.sdt.launching.SCALA_CONTAINER</classpathContainer>
          </classpathContainers>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.scala-tools</groupId>
        <artifactId>maven-scala-plugin</artifactId>
        <version>2.15.2</version>
        <configuration>
          <scalaVersion>${scala.version}</scalaVersion>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
</project>


